# KORE

./: .gitignore  AGENTS.md  ARCHITECTURE.md  GEMINI.md  PROJECT.md  READ.me  README.md  package-lock.json  package.json
ADR/: ADR-001.md  ADR-002.md  ADR-003.md  ADR-004.md  ADR-005.md  ADR-006.md  ADR-007.md  ADR-008.md  ADR-009.md  ADR-010.md
COMPANION/ios/APP/: index.html  (+2 more)
COMPANION/ios/APP/src-tauri/: .gitignore  Cargo.toml  build.rs  tauri.conf.json
COMPANION/ios/APP/src-tauri/capabilities/: default.json
COMPANION/ios/APP/src-tauri/src/: lib.rs  main.rs
COMPANION/ios/APP/src-tauri/src/commands/: connection.rs
COMPANION/ios/APP/src-tauri/src/communication/: ble.rs  handshake.rs  manager.rs  mod.rs  protocol.rs  serial.rs  types.rs
COMPANION/ios/APP/src-tauri/src/events/: connection.rs
COMPANION/ios/APP/src-tauri/src/models/: connection.rs
COMPANION/ios/APP/src-tauri/src/state/: connection.rs
COMPANION/macos/APP/src-tauri/: .gitignore  Cargo.toml  Info.plist  build.rs  tauri.conf.json
COMPANION/macos/APP/src-tauri/icons/: icon.icns
COMPANION/macos/APP/src-tauri/native/: NotificationWatcher.swift
COMPANION/macos/APP/src-tauri/src/: lib.rs  main.rs
COMPANION/macos/APP/src-tauri/src/commands/: connection.rs  google.rs  mod.rs  settings.rs  spotify.rs  weather.rs
COMPANION/macos/APP/src-tauri/src/communication/: ble.rs  handshake.rs  manager.rs  protocol.rs  serial.rs
COMPANION/macos/APP/src-tauri/src/events/: google.rs  settings.rs  spotify.rs  weather.rs
COMPANION/macos/APP/src-tauri/src/models/: connection.rs  google.rs  mod.rs  settings.rs  spotify.rs  weather.rs
COMPANION/macos/APP/src-tauri/src/services/: google.rs  mod.rs  notifications.rs  settings.rs  spotify.rs  weather.rs
COMPANION/macos/APP/src-tauri/src/state/: connection.rs  google.rs  settings.rs  spotify.rs  weather.rs
DESIGN_SYSTEM/: 001_foundations.md  002_colors.md  003_typography.md  004_icons.md  005_spacing.md  006_layout.md  007_components.md  008_motion.md  009_accessibility.md  010_tokens.md
HARNESS/: HARNESS-005.md  HARNESS-006.md  HARNESS-008.md  HARNESS-010.md  HARNESS-011.md  HARNESS-012.md
HARNESS/firmware/: HARNESS-001.md  HARNESS-002.md  HARNESS-003.md  HARNESS-004.md  HARNESS-005.md
HARNESS/shared/: HARNESS-001.md  HARNESS-002.md
KORE_OS/: KORE_OS.ino
KORE_OS/data/: emotion_rules.json
SPEC/firmware/: 000_discovery.md  001_foundations.md  002_emotion_manager.md  003_firmware_review.md  004_input_adapter.md  005_ancs.md
SPEC/shared/: 001_secure_ble.md  002_ancs.md
VISUAL/CAT.icon/: icon.json
docs/: ERROR_COMPANION.MD  IOS_roadmap.md
(+162 files in other folders)
