[package]
name = "kore-companion"
version = "0.1.0"
description = "K.O.R.E. Companion"
authors = ["K.O.R.E."]
edition = "2021"

[lib]
name = "kore_companion_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-deep-link = "2"
dotenvy = "0.15"
urlencoding = "2.1"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
btleplug = "0.11"
tokio = { version = "1", features = ["full"] }
futures = "0.3"
async-trait = "0.1"
uuid = { version = "1", features = ["v4"] }
log = "0.4"
env_logger = "0.10"
chrono = "0.4"
