[package]
name = "kore-companion"
version = "0.1.0"
description = "K.O.R.E. Companion"
authors = ["K.O.R.E."]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "kore_companion_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-deep-link = "2"
dotenvy = "0.15"
urlencoding = "2.1"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serialport = "4.7"
tiny_http = "0.12"
btleplug = "0.11"
tokio = { version = "1", features = ["full"] }
futures = "0.3"
async-trait = "0.1"
uuid = { version = "1", features = ["v4"] }
log = "0.4"
env_logger = "0.10"
rand = "0.8"
base64 = "0.22"
sha2 = "0.10"
url = "2"
